--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-REACT_APP_CANDY_MACHINE_CONFIG=__PLACEHOLDER__
-REACT_APP_CANDY_MACHINE_ID=__PLACEHOLDER__
-REACT_APP_TREASURY_ADDRESS=__PLACEHOLDER__
-REACT_APP_CANDY_START_DATE=__PLACEHOLDER__
+REACT_APP_CANDY_MACHINE_CONFIG=5KK4UrAg7Dr8ndxhhgvi3wVxPjSJvATjz4BDWcNxDQmP
+REACT_APP_CANDY_MACHINE_ID=YP8QDwFKeakWBcakdZFTjWKchiE35sWtn2GGVeTcWG3
+REACT_APP_TREASURY_ADDRESS=68zbtmwo749XhNs1QdSV1KdqDX7gP7aeis12DAn3nWTR
+REACT_APP_CANDY_START_DATE=1635893271
 
-REACT_APP_SOLANA_NETWORK=devnet
-REACT_APP_SOLANA_RPC_HOST=https://explorer-api.devnet.solana.com
+REACT_APP_SOLANA_NETWORK=mainnet-beta
+REACT_APP_SOLANA_RPC_HOST=https://api.mainnet-beta.solana.com
